--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -9,13 +9,12 @@
 
     <title>New URL - TinyApp Example</title>
   </head>
-
   <body>
 
   <%- include ('partials/_header.ejs') %>
   <main style="margin: 1em;">
       <h3>Login</h3>
-      <form class="form-inline" action="/login" method="POST">
+      <form action="/login" method="POST">
         <div class="form-group mb-2">
           <label for="username">Email address:</label>
           <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
