--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -15,7 +15,7 @@
   <%- include ('partials/_header.ejs') %>
   <main style="margin: 1em;">
       <h3>Register</h3>
-      <form class="form-inline" action="/register" method="POST">
+      <form action="/register" method="POST">
         <div class="form-group mb-2">
           <label for="username">Email address:</label>
           <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
