made changes to filter URLs depending on account logged in

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,13 +22,17 @@
         </tr>
       </thead>
       <tbody>
+        <% if (!username) { %>
+          <p>Please login or register first to see URLs</p>  
+        <% }  else { %>
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
             <td><form method="GET" action="/urls/<%= url %>/"><button type="submit" class="btn btn-primary">Edit</button></form></td>  
             <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>  
           </tr>
+        <% } %>
         <% } %>
       </tbody>
     </table>
