--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,18 +19,24 @@
           <th scope="col">Long URL</th>
           <th scope="col">Edit</th>
           <th scope="col">Delete</th>
+          <th scope="col">Date Created</th>
+          <th scope="col"># of Visits</th>
+          <th scope="col"># of Unique Visits</th>
         </tr>
       </thead>
       <tbody>
         <% if (!username) { %>
-          <p>Please login or register first to see URLs</p>  
+          <p>Please login or register to see URLs</p>  
         <% }  else { %>
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
             <td><%= urls[url].longURL %></td>
             <td><form method="GET" action="/urls/<%= url %>/"><button type="submit" class="btn btn-primary">Edit</button></form></td>  
-            <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>  
+            <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td> 
+            <td> <%= urls[url].time %> </td>
+            <td> <%= urls[url].visits %> </td>
+            <td> <%= urls[url].uniqueVisits %> </td>
           </tr>
         <% } %>
         <% } %>
