--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -13,15 +13,15 @@
   <body>
 
   <%- include ('partials/_header.ejs') %>
-  <main style="margin: 1em;">
-      <h3>Register</h3>
-      <form action="/register" method="POST">
+  <main style="margin: 1em; display: flex; justify-content: center; flex-direction: column; align-items: center; height: calc(100vh - 90px)">
+      <form style="border: black 1px solid; padding: 50px;" action="/register" method="POST">
+        <h3>Register</h3>
         <div class="form-group mb-2">
           <label for="username">Email address:</label>
           <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
           <label for="password">Password:</label>
           <input class="form-control" type="text" name="password" style="width: 300px; margin: 1em">
-          <button type="submit" class="btn btn-primary">Register</button>
+          <button style="position: relative; left: 230px;" type="submit" class="btn btn-primary">Register</button>
         </div>
       </form>
     </main>
